# BulletLab

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  imgui.ini  llms.txt  mkdocs.yml  pyproject.toml  setup.py  test_imgui_input.py
.github/workflows/: ci.yml  docs.yml
bulletlab/: __init__.py
bulletlab/arsenal/: __init__.py  cache.py  client.py  downloader.py  exceptions.py  installer.py  paths.py  resolver.py
bulletlab/console/: __init__.py  autocomplete.py  context.py  decorators.py  engine.py  exceptions.py  help.py  parser.py  registry.py
bulletlab/console/commands/: __init__.py  loading.py  robot.py  simulation.py  utility.py  world.py
bulletlab/core/: __init__.py  camera.py  highlighter.py  simulation.py  world.py
bulletlab/logging/: __init__.py  csv_writer.py  json_writer.py  logger.py
bulletlab/plotting/: __init__.py  live_plot.py
bulletlab/robot/: __init__.py  joint.py  link.py  robot.py
bulletlab/telemetry/: __init__.py  channel.py  manager.py
bulletlab/ui/: __init__.py  app.py  script_runner.py  widgets.py
bulletlab/ui/panels/: __init__.py  console.py  explorer.py  plots.py  properties.py  telemetry.py
bulletlab/utils/: __init__.py  math_utils.py  silencer.py  timer.py  urdf_utils.py
docs/: cookbook.md  index.md  quickstart.md  styles.css
docs/api/: camera.md  highlighter.md  joint.md  link.md  logging.md  plotting.md  robot.md  simulation.md  telemetry.md  ui.md
docs/developer/: architecture.md  developer_guide.md
docs/guides/: arsenal_guide.md  console_guide.md  example_guide.md  plotting_guide.md  rl_guide.md  robot_guide.md  telemetry_guide.md  ui_guide.md  world_guide.md
examples/: 01_differential_drive_rover.py  02_robotic_arm.py  03_self_balancing_robot.py  04_drone_parameter_tuning.py  05_generic_robot_inspector.py  06_irregular_terrain.py  07_arsenal_loading.py  demo_ui_control.py  exp.py
examples/assets/: quadrotor.urdf
tests/: conftest.py  test_headless_smoke.py  test_joint.py  test_link.py  test_logging.py  test_plotting.py  test_robot.py  test_script_runner.py  test_simulation.py  test_telemetry.py  test_ui_panels.py  test_utils.py
