[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulletlab"
version = "0.1.0"
description = "A high-level robotics simulation and experimentation framework built on PyBullet."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ranasurya Ghosh", email = "ranasuryaghosh@gmail.com" }
]
maintainers = [
    { name = "Ranasurya Ghosh" }
]
requires-python = ">=3.10"
keywords = ["robotics", "simulation", "pybullet", "reinforcement-learning", "physics", "ImGui", "3D", "graphics", "research", "telemetry", "robot-control", "robotics-framework"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pybullet>=3.2.6",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "imgui[glfw]>=2.0.0",
    "pyqtgraph>=0.13.3",
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-material>=9.4.0",
]

[project.urls]
Repository = "https://github.com/NuclearVenom/BulletLab"

[tool.setuptools.packages.find]
where = ["."]
include = ["bulletlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bulletlab"]
omit = ["tests/*", "examples/*", "docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
